# viennacl-dev

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE  README  README.md  changelog  clean.sh  run_amg_cuda.sh  run_amg_opencl.sh  run_amg_openmp.sh
auxiliary/: CMakeLists.txt  README  checkincludes.py  converter  converter.cpp  generate-blas3-prod-align1.cpp  generate-blas3-prod-align1_norange.cpp  generate-blas3-prod-amd.cpp  generate-blas3-prod16-align1.cpp  generate-blas3-solve-align1.cpp  generate-matrix-element-ops.cpp  generate-vector-element-ops.cpp  viennacl-style.xml
auxiliary/compressed_matrix/: matrix.old_cl
auxiliary/compressed_matrix/align1/: bicgstab_kernel1.cl  bicgstab_kernel2.cl  block_trans_lu_backward.cl  block_trans_unit_lu_forward.cl  d_mat_mul.cl  d_tr_mat_mul.cl  diagonal.cl  jacobi.cl  jacobi_precond.cl  lu_backward.cl  lu_forward.cl  row_info_extractor.cl  row_scaling_1.cl  row_scaling_2.cl  trans_lu_backward.cl  trans_lu_forward.cl  trans_unit_lu_backward.cl  trans_unit_lu_forward.cl  trans_unit_lu_forward_slow.cl  unit_lu_backward.cl  unit_lu_forward.cl  vec_mul.cl  vec_mul_cpu.cl
auxiliary/compressed_matrix/align4/: vec_mul.cl
auxiliary/compressed_matrix/align8/: vec_mul.cl
auxiliary/coordinate_matrix/: matrix.old_cl
auxiliary/coordinate_matrix/align1/: row_info_extractor.cl  vec_mul.cl
auxiliary/coordinate_matrix/align128/: dummy
auxiliary/ell_matrix/align1/: d_mat_mul.cl  d_tr_mat_mul.cl  vec_mul.cl
auxiliary/fft/align1/: bluestein_post.cl  bluestein_pre.cl  complex_to_real.cl  fft_div_vec_scalar.cl  fft_mult_vec.cl  real_to_complex.cl  reverse_inplace.cl  transpose.cl  transpose_inplace.cl  vandermonde_prod.cl  zero2.cl
auxiliary/hyb_matrix/align1/: vec_mul.cl
auxiliary/ilu/align1/: block_ilu_substitute.cl  level_scheduling_substitute.cl  multifrontal_substitute.cl
auxiliary/matrix_col/: matrix.old_cl
auxiliary/matrix_col/align1/: add.cl  am_cpu.cl  am_gpu.cl  ambm_cpu_cpu.cl  ambm_cpu_gpu.cl  ambm_gpu_cpu.cl  ambm_gpu_gpu.cl  ambm_m_cpu_cpu.cl  ambm_m_cpu_gpu.cl  ambm_m_gpu_cpu.cl  ambm_m_gpu_gpu.cl  assign.cl  assign_cpu.cl  clear.cl  cpu_inplace_mult.cl  diagonal_assign_cpu.cl  element_op.cl  fft_direct.cl  fft_radix2.cl  fft_radix2_local.cl  fft_reorder.cl  inplace_add.cl  inplace_divide.cl  inplace_mult.cl  inplace_sub.cl  lower_triangular_substitute_inplace.cl  lu_factorize.cl  rank1_update.cl  sub.cl  (+13 more)
auxiliary/old/: clean.sh  convert.sh  generate-blas3.sh
doc/: CMakeLists.txt  Doxyfile.in  doxyfilter.py
doc/manual/: Makefile  additional-algorithms.dox  additional-algorithms.tex  algorithms.dox  algorithms.tex  authors.dox  benchmarks.tex  changelog.dox  changelogs.tex  contributors.tex  cover.tex  custom-contexts.dox  custom-contexts.tex  custom-kernels.dox  custom-kernels.tex  design.dox  design.tex  faq.dox  installation.dox  installation.tex  interfacing.dox  introduction.dox  introduction.tex  kernel-generation.tex  keywords.tex  license.dox  license.tex  main.dox  memory-model.tex  memory.dox  multi-device.dox  multi-device.tex  operations.dox  operations.tex  other-libs.tex  setup.tex  shared-lib.tex  shared-library.dox  structured-matrices.dox  structured-matrices.tex  (+7 more)
examples/: CMakeLists.txt
examples/autotuner/: CMakeLists.txt  blas1.cpp  blas2.cpp  blas3.cpp  command-line-utils.hpp  dot.cpp  dot_autotuning.cpp  dump_default_kernels.cpp  gemm.cpp  gemm_autotuning.cpp  gemv_autotuning.cpp  inner_product.cpp  learn_size_classifier.py  matrix_tuning.cpp  saxpy.cpp  vector-axpy_autotuning.cpp
examples/benchmarks/: CMakeLists.txt  benchmark-utils.hpp  blas3.cpp  copy.cpp  copy.cu  dense_blas.cpp  dense_blas.cu  direct_solve.cpp  direct_solve.cu  generator_blas1.cpp  generator_blas2.cpp  generator_blas3.cpp  io.hpp  opencl.cpp  qr.cpp  scheduler.cpp  solver.cpp  solver.cu  sparse.cpp  sparse.cu  vector.cpp
examples/parameters/: CMakeLists.txt  benchmark-utils.hpp  common.hpp  common_vprof.hpp  matrix.cpp  matrix_functors.hpp  parameter_reader.cpp  sparse.cpp  vector.cpp  vector_functors.hpp
examples/testdata/: README  result65025.txt  rhs65025.txt
examples/tutorial/: CMakeLists.txt  Random.hpp  amg.cpp  amg.cu  armadillo-with-viennacl.cpp  bandwidth-reduction.cpp  bisect.cpp  blas1.cpp  blas2.cpp  blas2.cu  blas3.cpp  blas3.cu  blas3range.cpp  blas3range.cu  custom-context.cpp  custom-cuda.cu  custom-kernels.cpp  eigen-with-viennacl.cpp  fft.cpp  fft.cu  ildl.cpp  iterative-armadillo.cpp  iterative-custom.cpp  iterative-custom.cu  iterative-eigen.cpp  iterative-mtl4.cpp  iterative-ublas.cpp  iterative.cpp  iterative.cu  lanczos.cpp  lanczos.cu  least-squares.cpp  least-squares.cu  libviennacl.cpp  matrix-free.cpp  matrix-free.cu  matrix-range.cpp  matrix-range.cu  mtl4-with-viennacl.cpp  multithreaded.cpp  (+25 more)
libviennacl/: CMakeLists.txt
libviennacl/include/: viennacl.hpp
libviennacl/src/: backend.cpp  backend.cu  blas1.cpp  blas1.cu  blas1_cuda.cu  blas1_host.cpp  blas1_host.cu  blas1_opencl.cpp  blas1_opencl.cu  blas2.cpp  blas2_cuda.cu  blas2_host.cpp  blas2_host.cu  blas2_opencl.cpp  blas2_opencl.cu  blas3.cpp  blas3.hpp  blas3_cuda.cu  blas3_host.cpp  blas3_host.cu  blas3_opencl.cpp  blas3_opencl.cu  helper.hpp  init_matrix.hpp  init_vector.hpp  viennacl_private.hpp
tests/: CMakeLists.txt  run_regression.sh
tests/src/: Random.hpp  autotuned_blas3.cpp  bisect.cpp  bisect.cu  blas3.cpp  blas3_prod.cpp  blas3_prod.cu  blas3_prod_double.cpp  blas3_prod_double.cu  blas3_prod_float.cpp  blas3_prod_float.cu  blas3_prod_float_double.hpp  blas3_solve.cpp  blas3_solve.cu  blas3_solve_double.cu  blas3_solve_float.cpp  blas3_solve_float.cu  blas3_solve_float_double.hpp  blas3range.cpp  external_1.cpp  external_1.cu  external_2.cpp  external_2.cu  fft.cpp  fft_1d.cpp  fft_1d.cu  fft_2d.cpp  fft_2d.cu  gen_blas1.cpp  gen_blas2.cpp  gen_blas3.cpp  generator_blas1.cpp  generator_blas2.cpp  generator_blas3.cpp  generator_inner_product.cpp  generator_matrix.cpp  generator_matrix_vector_product.cpp  generator_multiline.cpp  generator_segmentation.cpp  generator_vector.cpp  (+90 more)
(+824 files in other folders)
