include_directories(${PROJECT_SOURCE_DIR}/external)

if (ENABLE_OPENCL)
  foreach(proc dot_autotuning dump_default_kernels)
    add_executable(${proc} ${proc}.cpp)
    target_link_libraries(${proc} ${OPENCL_LIBRARIES})
    set_target_properties(${proc} PROPERTIES COMPILE_FLAGS "-DVIENNACL_WITH_OPENCL")
  endforeach()

  if (ENABLE_UBLAS)
    foreach(proc gemv_autotuning gemm_autotuning)
      add_executable(${proc} ${proc}.cpp)
      target_link_libraries(${proc} ${OPENCL_LIBRARIES})
      set_target_properties(${proc} PROPERTIES COMPILE_FLAGS "-DVIENNACL_WITH_OPENCL")
    endforeach()
  endif (ENABLE_UBLAS)
endif (ENABLE_OPENCL)
